Fix overflow issues on mobile safari

--- a/themes/hugodocs/pipeline/scss/base/_base.scss
+++ b/themes/hugodocs/pipeline/scss/base/_base.scss
@@ -19,10 +19,12 @@ body {
   color: $base-font-color;
   line-height: $base-line-height-content;
   font-weight: $base-font-weight;
+   overflow-x:hidden;
 }
 
 body {
   font-size: 90%;
+   overflow-x:hidden;
   @include MQ(M) {
     font-size: 95%;
   }
